--- a/test-output/old/OpenCartSuite/methods-alphabetical.html
+++ b/test-output/old/OpenCartSuite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>OpenCartSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e1e270">  <td>22/12/11 13:12:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String)[pri:0, instance:testCases.TC_003_LoginDDT@449a4f23]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@602423811</td>   <td></td> </tr>
-<tr bgcolor="e1e270">  <td>22/12/11 13:13:38</td>   <td>54455</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC_003_LoginDDT@449a4f23]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@602423811</td>   <td></td> </tr>
-<tr bgcolor="da8dc5">  <td>22/12/11 13:13:24</td>   <td>40791</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_003_LoginDDT.test_LoginDDT(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testCases.TC_003_LoginDDT@449a4f23]">test_LoginDDT</td> 
-  <td>TestNG-tests-1@602423811</td>   <td></td> </tr>
-<tr bgcolor="da8dc5">  <td>22/12/11 13:13:24</td>   <td>40791</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_003_LoginDDT.test_LoginDDT(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testCases.TC_003_LoginDDT@449a4f23]">test_LoginDDT</td> 
-  <td>TestNG-tests-1@602423811</td>   <td></td> </tr>
-<tr bgcolor="da8dc5">  <td>22/12/11 13:13:24</td>   <td>40791</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_003_LoginDDT.test_LoginDDT(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testCases.TC_003_LoginDDT@449a4f23]">test_LoginDDT</td> 
-  <td>TestNG-tests-1@602423811</td>   <td></td> </tr>
-<tr bgcolor="da8dc5">  <td>22/12/11 13:13:24</td>   <td>40791</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_003_LoginDDT.test_LoginDDT(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:testCases.TC_003_LoginDDT@449a4f23]">test_LoginDDT</td> 
-  <td>TestNG-tests-1@602423811</td>   <td></td> </tr>
+<tr bgcolor="689886">  <td>23/07/16 20:40:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String)[pri:0, instance:testCases.TC_001_AccountRegistrationTest@22a637e7]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@456771524</td>   <td></td> </tr>
+<tr bgcolor="689886">  <td>23/07/16 20:40:49</td>   <td>3308</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String)[pri:0, instance:testCases.TC_002_LoginTest@4c9f8c13]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@456771524</td>   <td></td> </tr>
+<tr bgcolor="689886">  <td>23/07/16 20:40:50</td>   <td>4400</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC_002_LoginTest@4c9f8c13]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="689886">  <td>23/07/16 20:40:49</td>   <td>3307</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC_001_AccountRegistrationTest@22a637e7]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="e5637f">  <td>23/07/16 20:40:49</td>   <td>3299</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_AccountRegistrationTest.test_account_Registration()[pri:0, instance:testCases.TC_001_AccountRegistrationTest@22a637e7]">test_account_Registration</td> 
+  <td>TestNG-tests-1@456771524</td>   <td></td> </tr>
+<tr bgcolor="a7c69f">  <td>23/07/16 20:40:50</td>   <td>4398</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_002_LoginTest.test_login()[pri:0, instance:testCases.TC_002_LoginTest@4c9f8c13]">test_login</td> 
+  <td>TestNG-tests-1@456771524</td>   <td></td> </tr>
 </table>
